2015-03-28 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet.[c|h]: moved Tcl panic procedure data from
    mod_rivet_globals to rivet_thread_private
    * src/mod_rivet/mod_rivet_common.[c|h]: new procedure Rivet_SetupTclPanicProc
    and Rivet_PanicProc fixed to handle thread private data to get valid
    and thread safe information about the module status. New procedure
    Rivet_CreatePrivateData should provide a common method for all bridges
    to create thread private data
    * src/mod_rivet/rivet_[prefork|worker]_mpm.c: exploiting
    Rivet_CreatePrivateData and Rivet_SetupTclPanicProc makes code
    more localized, removes redundancy and improves readability

2015-03-18 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: update installation and configuration examples

2015-03-11 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: Improved paragraph on how to extend mod_rivet
    * src/apache-2/mod_rivet.c: Improper handling of 'HTTP_NOT_FOUND' and
    HTTP_INTERNAL_SERVER_ERROR caused an access to non existing memory (Bug #57686)

2015-02-20 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: updating examples and version
    * src/mod_rivet/mod_rivet.c: Restoring usual Rivet/VERSION signature

2015-02-07 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/: removed, now maintained only in branches/2.2
    * src/mod_rivet: new directory with code for MPM aware mod_rivet
    * src/experimental: removed

2015-02-03 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivet_worker_mpm.c: assigning to base server interpreter
    the channel referenced in private->channel (was dangling and caused segfaults)

2015-02-02 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivet_worker_mpm.c: removing commented code and adding
    new function Rivet_MPM_Shutdown aimed at forcing ancillary thread to exit
    * src/experimental/rivetCore.c: in Rivet_Parse returned value of 